@@ -1,5 +1,6 @@
 2003-07-26  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>
 
+	* show_comics: applied patch #777511, check pid in lock file.
 	* show_comics: applied patch #776915, wait until start time.
 
 2003-07-12  Chris Hostetter  <hossman at users * sourceforge * net>
